--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,8 +38,8 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.ovio_adminend"
-        minSdkVersion 16
+        applicationId "com.example.ovio_user"
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
