--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ environment:
 dependencies:
   intro_views_flutter: ^2.8.0
   introduction_screen: ^1.0.7
+  flutter_rating: ^0.0.2
+  dropdownfield: ^1.0.0
   flutter:
     sdk: flutter
 
