--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   intro_views_flutter: ^2.8.0
   introduction_screen: ^1.0.7
+  http: ^0.12.0+2
   flutter_rating: ^0.0.2
   dropdownfield: ^1.0.0
   flutter:
