--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   http: ^0.12.0+2
   flutter_rating: ^0.0.2
   dropdownfield: ^1.0.0
+  firebase_auth: ^0.15.0
+  skeleton_text: ^1.0.0
   flutter:
     sdk: flutter
 
