--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,11 @@ dependencies:
   dropdownfield: ^1.0.0
   firebase_auth: ^0.15.0
   skeleton_text: ^1.0.0
+  firebase_dynamic_links: ^0.5.0+1
+  rxdart: ^0.22.1+1
+  flutter_secure_storage: ^3.2.1+1
+  country_code_picker: ^1.1.7
+  pin_view: ^1.0.1
   flutter:
     sdk: flutter
 
