--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,5 +65,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.firebase:firebase-auth:19.1.0'
+    implementation 'com.google.firebase:firebase-firestore:21.3.1'
 }
 apply plugin: 'com.google.gms.google-services'
